--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.40.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.11.0",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
